syntax = "proto3";

package format;

option go_package = "xgo/tests/pb/pbformat";

import "google/protobuf/any.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

import "tests/proto/module/external.proto";

import "proto/json.proto";

message CodecTypeOneOf1 {
  oneof OneInt32 {
    option (json.oneof) = { json: "one_int32", inline: true };

    int32 f_int32_numeric = 1 [ (json.field) = { format: { int32: { codec: Numeric } } } ];
    int32 f_int32_string  = 2 [ (json.field) = { format: { int32: { codec: String } } } ];
  }

  oneof OneInt64 {
    option (json.oneof) = { json: "one_int64", inline: false };

    int64 f_int64_numeric = 3 [ (json.field) = { format: { int64: { codec: Numeric } } } ];
    int64 f_int64_string  = 4 [ (json.field) = { format: { int64: { codec: String } } } ];
  }

  oneof OneUint32 {
    option (json.oneof) = { json: "one_uint32", inline: true };

    uint32 f_uint32_numeric = 5 [ (json.field) = { format: { uint32: { codec: Numeric } } } ];
    uint32 f_uint32_string  = 6 [ (json.field) = { format: { uint32: { codec: String } } } ];

  }

  oneof OneUint64 {
    option (json.oneof) = { json: "one_uint64", inline: false };
    uint64 f_uint64_numeric = 7 [ (json.field) = { format: { uint64: { codec: Numeric } } } ];
    uint64 f_uint64_string  = 8 [ (json.field) = { format: { uint64: { codec: String } } } ];
  }

  oneof OneSInt32 {
    option (json.oneof) = { json: "one_sint32", inline: true };

    sint32 f_sint32_numeric = 9 [ (json.field) = { format: { sint32: { codec: Numeric } } } ];
    sint32 f_sint32_string  = 10 [ (json.field) = { format: { sint32: { codec: String } } } ];
  }

  oneof OneSInt64 {
    option (json.oneof) = { json: "one_sint64", inline: false };

    sint64 f_sint64_numeric = 11 [ (json.field) = { format: { sint64: { codec: Numeric } } } ];
    sint64 f_sint64_string  = 12 [ (json.field) = { format: { sint64: { codec: String } } } ];

  }

  oneof OneSFixed32 {
    option (json.oneof) = { json: "one_sfixed32", inline: true };

    sfixed32 f_sfixed32_numeric = 13 [ (json.field) = { format: { sfixed32: { codec: Numeric } } } ];
    sfixed32 f_sfixed32_string  = 14 [ (json.field) = { format: { sfixed32: { codec: String } } } ];
  }

  oneof OneSFixed64 {
    option (json.oneof) = { json: "one_sfixed64", inline: false };

    sfixed64 f_sfixed64_numeric = 15 [ (json.field) = { format: { sfixed64: { codec: Numeric } } } ];
    sfixed64 f_sfixed64_string  = 16 [ (json.field) = { format: { sfixed64: { codec: String } } } ];
  }

  oneof OneFixed32 {
    option (json.oneof) = { json: "one_fixed32", inline: true };

    fixed32 f_fixed32_numeric = 17 [ (json.field) = { format: { fixed32: { codec: Numeric } } } ];
    fixed32 f_fixed32_string  = 18 [ (json.field) = { format: { fixed32: { codec: String } } } ];
  }

  oneof OneFixed64 {
    option (json.oneof) = { json: "one_fixed64", inline: false };

    fixed64 f_fixed64_numeric = 19 [ (json.field) = { format: { fixed64: { codec: Numeric } } } ];
    fixed64 f_fixed64_string  = 20 [ (json.field) = { format: { fixed64: { codec: String } } } ];
  }

  oneof OneFloat {
    option (json.oneof) = { json: "one_float", inline: true };

    float f_float_numeric = 21 [ (json.field) = { format: { float: { codec: Numeric } } } ];
    float f_float_string  = 22 [ (json.field) = { format: { float: { codec: String } } } ];
  }

  oneof OneDouble {
    option (json.oneof) = { json: "one_double", inline: false };

    double f_double_numeric = 23 [ (json.field) = { format: { double: { codec: Numeric } } } ];
    double f_double_string  = 24 [ (json.field) = { format: { double: { codec: String } } } ];
  }

  oneof OneBool {
    option (json.oneof) = { json: "one_bool", inline: true };

    bool f_bool_bool   = 25 [ (json.field) = { format: { bool: { codec: Bool } } } ];
    bool f_bool_string = 26 [ (json.field) = { format: { bool: { codec: String } } } ];
  }

  // Cases for Enum
  oneof OneEnum1 {
    option (json.oneof) = { json: "one_enum1", inline: false };

    external.EnumNum1 f_enum_numeric = 31 [ (json.field) = { format: { enum: { codec: Numeric } } } ];
    external.EnumNum1 f_enum_string  = 32 [ (json.field) = { format: { enum: { codec: EnumString } } } ];
  }
  oneof OneEnum2 {
    option (json.oneof) = { json: "one_enum2", inline: true };

    external.EnumNum1 f_enum_numeric_string1 = 33 [ (json.field) = { format: { enum: { codec: NumericString } } } ];
    external.EnumNum1 f_enum_numeric_string2 = 34 [ (json.field) = { format: { enum: { codec: NumericString } } } ];
  }

  // Cases for google.protobuf.Any
  oneof OneAny1 {
    option (json.oneof) = { json: "one_any1", inline: true };

    google.protobuf.Any f_any_native = 41 [ (json.field) = { format: { any: { codec: Object } } } ];
    google.protobuf.Any f_any_proto  = 42 [ (json.field) = { format: { any: { codec: Proto } } } ];
  }

  // Cases for google.protobuf.Duration
  oneof OneDuration1 {
    option (json.oneof) = { json: "one_duration1", inline: false };

    google.protobuf.Duration f_duration_native = 51 [ (json.field) = { format: { duration: { codec: Object } } } ];
    google.protobuf.Duration f_duration_string = 52 [ (json.field) = { format: { duration: { codec: TimeString } } } ];
  }
  oneof OneDuration2 {
    option (json.oneof) = { json: "one_duration2", inline: true };

    google.protobuf.Duration f_duration_nanosecond  = 53 [ (json.field) = { format: { duration: { codec: Nanosecond } } } ];
    google.protobuf.Duration f_duration_microsecond = 54 [ (json.field) = { format: { duration: { codec: Microsecond } } } ];
  }
  oneof OneDuration3 {
    option (json.oneof) = { json: "one_duration3", inline: false };

    google.protobuf.Duration f_duration_millisecond = 55 [ (json.field) = { format: { duration: { codec: Millisecond } } } ];
    google.protobuf.Duration f_duration_second      = 56 [ (json.field) = { format: { duration: { codec: Second } } } ];
  }
  oneof OneDuration4 {
    option (json.oneof) = { json: "one_duration4", inline: true };

    google.protobuf.Duration f_duration_minute = 57 [ (json.field) = { format: { duration: { codec: Minute } } } ];
    google.protobuf.Duration f_duration_hour   = 58 [ (json.field) = { format: { duration: { codec: Hour } } } ];
  }
  oneof OneDuration5 {
    option (json.oneof) = { json: "one_duration5", inline: false };

    google.protobuf.Duration f_duration_nanosecond_string  = 59 [ (json.field) = { format: { duration: { codec: NanosecondString } } } ];
    google.protobuf.Duration f_duration_microsecond_string = 60 [ (json.field) = { format: { duration: { codec: MicrosecondString } } } ];
  }
  oneof OneDuration6 {
    option (json.oneof) = { json: "one_duration6", inline: true };

    google.protobuf.Duration f_duration_millisecond_string = 61 [ (json.field) = { format: { duration: { codec: MillisecondString } } } ];
    google.protobuf.Duration f_duration_second_string      = 62 [ (json.field) = { format: { duration: { codec: SecondString } } } ];
  }
  oneof OneDuration7 {
    option (json.oneof) = { json: "one_duration7", inline: false };

    google.protobuf.Duration f_duration_minute_string = 63 [ (json.field) = { format: { duration: { codec: MinuteString } } } ];
    google.protobuf.Duration f_duration_hour_string   = 64 [ (json.field) = { format: { duration: { codec: HourString } } } ];
  }

  // Cases for google.protobuf.Timestamp
  oneof OneTimestamp1 {
    option (json.oneof) = { json: "one_timestamp1", inline: false };

    google.protobuf.Timestamp f_timestamp_native      = 71 [ (json.field) = { format: { timestamp: { codec: Object } } } ];
    google.protobuf.Timestamp f_timestamp_time_layout = 72 [ (json.field) = { format: { timestamp: { codec: TimeLayout, layout: { golang: "2006-01-02T15:04:05Z07:00" } } } } ];
  }
  oneof OneTimestamp2 {
    option (json.oneof) = { json: "one_timestamp2", inline: true };

    google.protobuf.Timestamp f_timestamp_unix_nano  = 73 [ (json.field) = { format: { timestamp: { codec: UnixNano } } } ];
    google.protobuf.Timestamp f_timestamp_unix_micro = 74 [ (json.field) = { format: { timestamp: { codec: UnixMicro } } } ];
  }
  oneof OneTimestamp3 {
    option (json.oneof) = { json: "one_timestamp3", inline: false };

    google.protobuf.Timestamp f_timestamp_unix_milli = 75 [ (json.field) = { format: { timestamp: { codec: UnixMilli } } } ];
    google.protobuf.Timestamp f_timestamp_unix_sec   = 76 [ (json.field) = { format: { timestamp: { codec: UnixSec } } } ];
  }
  oneof OneTimestamp4 {
    option (json.oneof) = { json: "one_timestamp4", inline: true };

    google.protobuf.Timestamp f_timestamp_unix_nano_string  = 77 [ (json.field) = { format: { timestamp: { codec: UnixNanoString } } } ];
    google.protobuf.Timestamp f_timestamp_unix_micro_string = 78 [ (json.field) = { format: { timestamp: { codec: UnixMicroString } } } ];
  }
  oneof OneTimestamp5 {
    option (json.oneof) = { json: "one_timestamp5", inline: false };

    google.protobuf.Timestamp f_timestamp_unix_milli_string = 79 [ (json.field) = { format: { timestamp: { codec: UnixMilliString } } } ];
    google.protobuf.Timestamp f_timestamp_unix_sec_string   = 80 [ (json.field) = { format: { timestamp: { codec: UnixSecString } } } ];
  }
}
